src/views/Incidents/LeftPane/Visualizations/styles.scss
@import '~base-scss/base';

.visualizations {
    padding-top: $spacing-small;

    %chart-container {
        .header {
            .heading {
                padding: 0 $spacing-medium;
                color: $color-accent;
            }
        }

        .chart {
            height: 320px;
        }

        .legend {
            display: flex;
            align-items: center;
            justify-content: center;
            padding: 0 $spacing-medium;

            .legend-item {
                padding: $spacing-small;
            }
        }
    }

    .hazard-statistics-chart {
        @extend %chart-container;
    }

    .event-statistics-chart {
        @extend %chart-container;
    }

    .severity-summary {
        @extend %chart-container;

        .chart {
            height: 200px;
        }
    }

    .inducer-summary {
        @extend %chart-container;
    }
}

